--- a/discourse-tui.cabal
+++ b/discourse-tui.cabal
@@ -63,8 +63,10 @@ executable discourse-tui
   -- Other library packages from which modules are imported.
   build-depends:       base,
                        brick,
+                       cursor,
                        aeson,
-                       http-conduit
+                       http-conduit,
+                       vty
 
   -- Directories containing source files.
   hs-source-dirs:      src
