added border, OP, and asthetic tweaks

--- a/discourse-tui.cabal
+++ b/discourse-tui.cabal
@@ -54,7 +54,7 @@ executable discourse-tui
   main-is:             Main.hs
 
   -- Modules included in this executable, other than Main.
-  -- other-modules:
+  other-modules:       Types
 
   -- LANGUAGE extensions used by modules in this package.
   extensions: ScopedTypeVariables, OverloadedStrings
@@ -66,7 +66,8 @@ executable discourse-tui
                        cursor,
                        aeson,
                        http-conduit,
-                       vty
+                       vty,
+                       containers
 
   -- Directories containing source files.
   hs-source-dirs:      src
