added posts in commonmark using pandoc

--- a/discourse-tui.cabal
+++ b/discourse-tui.cabal
@@ -68,7 +68,9 @@ executable discourse-tui
                        http-conduit,
                        vty,
                        containers,
-                       vector
+                       vector,
+                       pandoc,
+                       text
 
   -- Directories containing source files.
   hs-source-dirs:      src
