--- a/discourse-tui.cabal
+++ b/discourse-tui.cabal
@@ -54,7 +54,7 @@ executable discourse-tui
   main-is:             Main.hs
 
   -- Modules included in this executable, other than Main.
-  other-modules:       Types
+  other-modules:       Types, VHList
 
   -- LANGUAGE extensions used by modules in this package.
   default-extensions: ScopedTypeVariables,
